# html_editor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yaml
benches/: bench.html  bench.rs
src/: data.rs  edit.rs  html.rs  lib.rs  parse.rs  prelude.rs  query.rs
src/operation/: edit.rs  html.rs  mod.rs  query.rs  selector.rs
src/operation/selector/: compound.rs  mod.rs  simple.rs
src/parse/: attrs.rs  token.rs
tests/: edit.rs  escapes.rs  html.rs  parse.rs  parse_error.rs  query.rs  selector.rs
