[package]
name = "html_editor"
version = "0.5.2"
edition = "2021"
authors = ["Lomirus"]
description = "Pure and simple HTML parser and editor."
homepage = "https://github.com/lomirus/html_editor"
repository = "https://github.com/lomirus/html_editor"
license = "MIT"
keywords = ["html", "parser", "editor", "dom"]

[dependencies]
